<resources>
    <string name="app_name">Prototype</string>

    <string name="btn_confirm">Confirm</string>

    <!--Message in Json Response-->
    <string name="json_msg_error">No Network Connection, Please Connect to the Internet</string>
    <string name="json_msg_failed">Wrong response to the Server, Please contact SFAS Administrator</string>

    <!--Login String-->
    <string name="msg_incorrect_user">Please fill the field</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


    <!--Empty DSC-->
    <string name="msg_please_click">Please click</string>
    <string name="msg_get_new">to get new</string>
    <string name="msg_dsc">DSC</string>

    <!--Status-->
    <string name="status">STATUS</string>

    <string name="lblSalesman">Salesman</string>
    <string name="lblDate">Date</string>
    <string name="lblRoute">Route</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
